--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "npm run write && react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "write": "echo ${REDIRECT} > build/_redirects"
     },
     "eslintConfig": {
         "extends": [
