--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "npm run write && react-scripts build",
+        "build": "react-scripts build && npm run write",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "write": "echo ${REDIRECT} > build/_redirects"
