--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build && npm run write",
+        "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "write": "echo ${REDIRECT} > build/_redirects"
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
