--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react": "^17.0.2",
         "react-bootstrap": "^1.5.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
@@ -46,5 +47,8 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:9999/"
+    "proxy": "http://localhost:9999/",
+    "devDependencies": {
+        "@types/react-router-dom": "^5.1.7"
+    }
 }
